Fixed alignment for announcement section

--- a/html/index.html
+++ b/html/index.html
@@ -38,11 +38,11 @@
             target="_blank"
           >
             <p class="announcement">STREAM MS. MARVEL EXCLUSIVELY ON</p>
-
+            &nbsp;&nbsp;
             <figure>
               <img
                 id="disney-plus-logo-img"
-                src="https://terrigen-cdn-dev.marvel.com/content/prod/1x/disneybtn_asset2x_6.png"
+                src="https://terrigen-cdn-dev.marvel.com/content/prod/2x/disneybtn_asset2x_6.png"
                 alt="Disney Plus Logo"
                 title="Disney Plus"
                 width="57"
