Added main wallpaper to home page

--- a/html/index.html
+++ b/html/index.html
@@ -54,7 +54,24 @@
         </section>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section id="wallpaper">
+        <figure>
+          <img
+            id="marvel-wallpaper"
+            src="../img/marvel-wallpaper.jpg"
+            alt="Marvel Wallpaper"
+            title="Marvel Cinematic Universe"
+          />
+          <figcaption>Welcome to the Marvel Cinematic Universe</figcaption>
+        </figure>
+      </section>
+      <section id="timeline-order"></section>
+      <section id="phase-one"></section>
+      <section id="phase-two"></section>
+      <section id="phase-three"></section>
+      <section id="phase-four"></section>
+    </main>
     <footer></footer>
   </body>
 </html>
