Re-organized announcement section outside the nav tag

--- a/html/index.html
+++ b/html/index.html
@@ -25,34 +25,34 @@
         </a>
         <hr />
         <ul id="main-nav-list">
-          <a href="#"> <li class="main-nav-item">HOME</li></a>
-          <a href="#"> <li class="main-nav-item">TIMELINE ORDER</li></a>
-          <a href="#"> <li class="main-nav-item">PHASE ONE</li></a>
-          <a href="#"> <li class="main-nav-item">PHASE TWO</li></a>
-          <a href="#"> <li class="main-nav-item">PHASE THREE</li></a>
-          <a href="#"> <li class="main-nav-item">PHASE FOUR</li></a>
+          <a href="#"> <li class="main-nav-item">Home</li></a>
+          <a href="#"> <li class="main-nav-item">Timeline Order</li></a>
+          <a href="#"> <li class="main-nav-item">Phase One</li></a>
+          <a href="#"> <li class="main-nav-item">Phase Two</li></a>
+          <a href="#"> <li class="main-nav-item">Phase Three</li></a>
+          <a href="#"> <li class="main-nav-item">Phase Four</li></a>
         </ul>
-        <section id="announcement-section">
-          <a
-            href="https://www.disneyplus.com/series/ms-marvel/45BsikoMcOOo?cid=DTCI-Synergy-Marvel-Site-Acquisition-Originals-US-Marvel-MsMarvel-EN-NavPipe-Marvel_NavPipe_MsMarvel-NA"
-            target="_blank"
-          >
-            <p class="announcement">STREAM MS. MARVEL EXCLUSIVELY ON</p>
-            &nbsp;&nbsp;
-            <figure>
-              <img
-                id="disney-plus-logo-img"
-                src="https://terrigen-cdn-dev.marvel.com/content/prod/2x/disneybtn_asset2x_6.png"
-                alt="Disney Plus Logo"
-                title="Disney Plus"
-                width="57"
-                height="40"
-                loading="lazy"
-              />
-            </figure>
-          </a>
-        </section>
       </nav>
+      <section id="announcement-section">
+        <a
+          href="https://www.disneyplus.com/series/ms-marvel/45BsikoMcOOo?cid=DTCI-Synergy-Marvel-Site-Acquisition-Originals-US-Marvel-MsMarvel-EN-NavPipe-Marvel_NavPipe_MsMarvel-NA"
+          target="_blank"
+        >
+          <p class="announcement">Stream Ms. Marvel Exclusively On</p>
+          &nbsp;&nbsp;
+          <figure>
+            <img
+              id="disney-plus-logo-img"
+              src="https://terrigen-cdn-dev.marvel.com/content/prod/2x/disneybtn_asset2x_6.png"
+              alt="Disney Plus Logo"
+              title="Disney Plus"
+              width="57"
+              height="40"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+      </section>
     </header>
     <main>
       <section id="wallpaper">
