Added a learn more button to the wallpaper section

--- a/html/index.html
+++ b/html/index.html
@@ -63,6 +63,11 @@
             alt="Marvel Wallpaper"
             title="Marvel Cinematic Universe"
           />
+          <a class="about-marvel" href="about.html">
+            <button class="learn-more-btn" type="button">
+              &lt;&nbsp; Learn More &nbsp;&gt;
+            </button>
+          </a>
           <figcaption>Welcome to the Marvel Cinematic Universe</figcaption>
         </figure>
       </section>
