Added content to the body's main area

--- a/html/index.html
+++ b/html/index.html
@@ -71,11 +71,269 @@
           <figcaption>Welcome to the Marvel Cinematic Universe</figcaption>
         </figure>
       </section>
-      <section id="timeline-order"></section>
-      <section id="phase-one"></section>
-      <section id="phase-two"></section>
-      <section id="phase-three"></section>
-      <section id="phase-four"></section>
+
+      <section id="timeline-order">
+        <h2 class="marvel-heading">
+          Marvel Cinematic Universe in Timeline Order
+        </h2>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/33C19C31D83E24466C69E31D4EF85685AB22DFCC25ECAE7EFD8C00C63EEE081A/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Captain America: The First Avenger"
+              title="Captain America: The First Avenger"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/B221EB5B1EEC642128E365C2C44D6CD300236ED1AAEF32F2E762414BA3FBA6BC/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Agent Carter"
+              title="Agent Carter"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/737B21691F60D250D933239E0BB5AF49B1444D961908D987F9D1CD14D87EA2F8/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Captain Marvel"
+              title="Captain Marvel"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/F3D3913C40E89821027D128C295E127E80DDFC17157E6E10B622CCACFB56FE77/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Iron Man"
+              title="Iron Man"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-heading-btn" href="timeline-order.html">&rarr;</a>
+      </section>
+      <section id="phase-one">
+        <h2 class="marvel-heading">Marvel Cinematic Universe Phase One</h2>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/F3D3913C40E89821027D128C295E127E80DDFC17157E6E10B622CCACFB56FE77/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Iron Man"
+              title="Iron Man"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/257EF5C085055BC2C3E982039C524F5158A578E9B9C25D6770FD2B034199C63C/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Iron Man 2"
+              title="Iron Man 2"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/27D2C8529FA57B6AE389BE2871E7A2821A3D98E6AB68A5D141930D486B6832FA/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Thor"
+              title="Thor"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/9368431603C1B207DF7523B348AEBAF7ECA9B661846F8575959550614038E963/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Marvel One-Shot: The Consultant"
+              title="Marvel One-Shot: The Consultant"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-heading-btn" href="timeline-order.html">&rarr;</a>
+      </section>
+      <section id="phase-two">
+        <h2 class="marvel-heading">Marvel Cinematic Universe Phase Two</h2>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/CFD0FAA9946DC861F5C5C265D70B53B8E81843A61CA2144C61481A76F5C7B534/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Iron Man 3"
+              title="Iron Man 3"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/B221EB5B1EEC642128E365C2C44D6CD300236ED1AAEF32F2E762414BA3FBA6BC/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Agent Carter"
+              title="Agent Carter"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/414658B469A80316E79F4D7A98B0257A5430033D16350EAAA7C7E7686244EAE1/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Thor: The Dark World"
+              title="Thor: The Dark World"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/530916EA9E30B9A1256D7C4D296F4A64F9B303A4DD0450E5D969A51F7E6C680C/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Marvel One-Shot: All Hail the King"
+              title="Marvel One-Shot: All Hail the King"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-heading-btn" href="timeline-order.html">&rarr;</a>
+      </section>
+      <section id="phase-three">
+        <h2 class="marvel-heading">Marvel Cinematic Universe Phase Three</h2>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/92DE57B71839B0282DF0C2F9051799B8478474433C8838561DD9A8821AB87DF7/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Marvel Studios' Captain America: Civil War"
+              title="Marvel Studios' Captain America: Civil War"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/BED109FDDCBE15F3E4E0702D036057818026C5A9DA0C29103B4628297166AE9E/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Marvel One-Shot: Team Thor: Part 1"
+              title="Marvel One-Shot: Team Thor: Part 1"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/226DB7C90442683C5F252E9578355540E75C0643925E5ACA9EF87B5AB7340977/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Marvel Studios' Doctor Strange"
+              title="Marvel Studios' Doctor Strange"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/6AE489102B863E1513B6572590984AD14D356673BEFC7AFE11642801B593C2BF/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Marvel One-Shot: Team Thor: Part 2"
+              title="Marvel One-Shot: Team Thor: Part 2"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-heading-btn" href="timeline-order.html">&rarr;</a>
+      </section>
+      <section id="phase-four">
+        <h2 class="marvel-heading">Marvel Cinematic Universe Phase Four</h2>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/9896782C53957FDA52D449B902978C868F376A2FB7F67D4F1E6EF6199D3A965D/badging?width=400&aspectRatio=1.78&format=jpeg&label=disneyplusoriginal"
+              alt="WandaVision"
+              title="WandaVision"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/41900DAD0D429A41E69C73B812EDCE19DC3921A8D1F3611A82292161C3A3AA15/badging?width=400&aspectRatio=1.78&format=jpeg&label=disneyplusoriginal"
+              alt="The Falcon and The Winter Soldier"
+              title="The Falcon and The Winter Soldier"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/315E5DB5FA9FEA9C30B0402BB7F001BC4FAB1F41DA9A9F49E8066AAD6FDB6B06/badging?width=400&aspectRatio=1.78&format=jpeg&label=disneyplusoriginal"
+              alt="Loki"
+              title="Loki"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-link" href="#">
+          <figure>
+            <img
+              src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/6064E82B7EDD710225B789FCF65D87F55D32F2A90EAD8226D69B3C1F9EB51F45/scale?width=400&aspectRatio=1.78&format=jpeg"
+              alt="Black Widow"
+              title="Black Widow"
+              width="400"
+              height="225"
+              loading="lazy"
+            />
+          </figure>
+        </a>
+        <a class="marvel-heading-btn" href="timeline-order.html">&rarr;</a>
+      </section>
     </main>
     <footer></footer>
   </body>
