Initial setup of footer navigation

--- a/html/index.html
+++ b/html/index.html
@@ -335,6 +335,29 @@
         <a class="marvel-heading-btn" href="timeline-order.html">&rarr;</a>
       </section>
     </main>
-    <footer></footer>
+    <br /><br />
+    <hr />
+    <br /><br /><br /><br />
+    <footer>
+      <nav id="sub-nav" aria-label="sub-nav">
+        <a href="#"><img class="sub-nav-m" src="../img/marvel-m-logo.png" /></a>
+        <ul class="sub-nav-list">
+          <li><a href="#">About Marvel</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Timeline Order</a></li>
+          <li><a href="#">Phase One</a></li>
+        </ul>
+        <ul class="sub-nav-list">
+          <li><a href="#">Phase Two</a></li>
+          <li><a href="#">Phase Three</a></li>
+          <li><a href="#">Phase Four</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+        <a> <img src="../img/marvel-logo.png" /> </a>
+      </nav>
+      <br /><br /><br /><br /><br /><br />
+      <p style="text-align: center">&copy; 2022 Marvel Timeine</p>
+    </footer>
+    <br /><br /><br /><br /><br />
   </body>
 </html>
