Added social media icons to footer navigation

--- a/html/index.html
+++ b/html/index.html
@@ -342,8 +342,8 @@
       <nav id="sub-nav" aria-label="sub-nav">
         <a href="#"><img class="sub-nav-m" src="../img/marvel-m-logo.png" /></a>
         <ul class="sub-nav-list">
-          <li><a href="#">About Marvel</a></li>
           <li><a href="#">Home</a></li>
+          <li><a href="#">About Marvel</a></li>
           <li><a href="#">Timeline Order</a></li>
           <li><a href="#">Phase One</a></li>
         </ul>
@@ -353,10 +353,20 @@
           <li><a href="#">Phase Four</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
-        <a> <img src="../img/marvel-logo.png" /> </a>
+        <section id="social-media">
+          <a href="#">
+            <img src="../img/facebook.png" />
+          </a>
+          <a href="#">
+            <img src="../img/instagram.png" />
+          </a>
+          <a href="#">
+            <img src="../img/twitter.png" />
+          </a>
+        </section>
       </nav>
       <br /><br /><br /><br /><br /><br />
-      <p style="text-align: center">&copy; 2022 Marvel Timeine</p>
+      <p style="text-align: center">&copy; 2022 Marvel Timeline</p>
     </footer>
     <br /><br /><br /><br /><br />
   </body>
