--- a/html/index.html
+++ b/html/index.html
@@ -29,19 +29,19 @@
           <a href="about.html">
             <li class="main-nav-item">About</li>
           </a>
-          <a href="timeline-order.html">
+          <a href="#timeline-order">
             <li class="main-nav-item">Timeline Order</li>
           </a>
-          <a href="phase-one.html">
+          <a href="#phase-one">
             <li class="main-nav-item">Phase One</li>
           </a>
-          <a href="phase-two.html">
+          <a href="#phase-two">
             <li class="main-nav-item">Phase Two</li>
           </a>
-          <a href="phase-three.html">
+          <a href="#phase-three">
             <li class="main-nav-item">Phase Three</li>
           </a>
-          <a href="phase-four.html">
+          <a href="#phase-four">
             <li class="main-nav-item">Phase Four</li>
           </a>
         </ul>
@@ -138,7 +138,7 @@
               />
             </figure>
           </a>
-          <a class="marvel-heading-btn" href="timeline-order.html">&rarr;</a>
+          <a class="marvel-heading-btn" href="#">&rarr;</a>
         </section>
         <section id="phase-one">
           <h2 class="marvel-heading">Marvel Cinematic Universe Phase One</h2>
@@ -190,7 +190,7 @@
               />
             </figure>
           </a>
-          <a class="marvel-heading-btn" href="timeline-order.html">&rarr;</a>
+          <a class="marvel-heading-btn" href="#">&rarr;</a>
         </section>
         <section id="phase-two">
           <h2 class="marvel-heading">Marvel Cinematic Universe Phase Two</h2>
@@ -242,7 +242,7 @@
               />
             </figure>
           </a>
-          <a class="marvel-heading-btn" href="timeline-order.html">&rarr;</a>
+          <a class="marvel-heading-btn" href="#">&rarr;</a>
         </section>
         <section id="phase-three">
           <h2 class="marvel-heading">Marvel Cinematic Universe Phase Three</h2>
@@ -294,7 +294,7 @@
               />
             </figure>
           </a>
-          <a class="marvel-heading-btn" href="timeline-order.html">&rarr;</a>
+          <a class="marvel-heading-btn" href="#">&rarr;</a>
         </section>
         <section id="phase-four">
           <h2 class="marvel-heading">Marvel Cinematic Universe Phase Four</h2>
@@ -346,7 +346,7 @@
               />
             </figure>
           </a>
-          <a class="marvel-heading-btn" href="timeline-order.html">&rarr;</a>
+          <a class="marvel-heading-btn" href="#">&rarr;</a>
         </section>
       </article>
     </main>
@@ -356,18 +356,23 @@
     <footer>
       <nav id="sub-nav" aria-label="sub-nav">
         <a href="index.html">
-          <img class="sub-nav-m" src="../img/marvel-m-logo.png" />
+          <img
+            class="sub-nav-m"
+            src="../img/marvel-m-logo.png"
+            alt="Marvel M Logo"
+            title="Marvel M Logo"
+          />
         </a>
         <ul class="sub-nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Marvel</a></li>
-          <li><a href="timeline-order.html">Timeline Order</a></li>
-          <li><a href="phase-one.html">Phase One</a></li>
+          <li><a href="#timeline-order">Timeline Order</a></li>
+          <li><a href="#phase-one">Phase One</a></li>
         </ul>
         <ul class="sub-nav-list">
-          <li><a href="phase-two.html">Phase Two</a></li>
-          <li><a href="phase-three.html">Phase Three</a></li>
-          <li><a href="phase-four.html">Phase Four</a></li>
+          <li><a href="#phase-two">Phase Two</a></li>
+          <li><a href="#phase-three">Phase Three</a></li>
+          <li><a href="#phase-four">Phase Four</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <section id="social-media">
